# biditex

./: COPYING  INSTALLATION  Makefile.am  README  README.md  bidi.c  bidi.h  biditex.c  biditex_src.prj  configure.ac  defines.h  description-pak  excl.txt  io.c  io.h  makefile  makefile.win32  postinstall-pak  release_script.sh  util.c
biditex/: README-WIN32  bidi.c  bidi.h  biditex.c  biditex.kdevelop  biditex.kdevelop.filelist  biditex_src.prj  defines.h  dict.c  io.c  io.h  makefile  makefile.mingw32
docs/: copyright
docs/biditex-doc/: bidi-doc.tex  biditex.tex  makefile  makefile.win32
docs/example/: biditex.sty  example.tex  makefile
docs/man/: README.TXT  biditex.1  makefile
fribidi/: BIDITEX-README  fribidi_char_sets_cp1255.c  fribidi_config.h  makefile
src/: biditex.sty  ignore.c  makefile
